# SxT-Python-SDK

./: .env.sample  .gitignore  LICENSE  MANIFEST.in  README.MD  authorize.datalog  keygen.py  main.py  pyproject.toml  requirements.txt  run_test_py3x.sh  setup.py  spaceandtimesdk.py  validation.py
pysxt/: __init__.py  main.py  spaceandtimesdk.py  validation.py
src/spaceandtime/: .env.sample  __init__.py  __main__.py  apiversions.json  spaceandtime.py  sxtbaseapi.py  sxtbiscuits.py  sxtenums.py  sxtexceptions.py  sxtkeymanager.py  sxtresource.py  sxtuser.py
tests/: scratchpad.py  setup.py  test_create_drop_table_views.py  test_create_table_and_view.py  test_run_queries.py  test_spaceandtime.py  test_sxtbaseapi.py  test_sxtresource.py
